--- a/.env-e
+++ b/.env-e
@@ -3,15 +3,16 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="mysql://root:password@localhost:3306/game-landing-feedback"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/game-landing-feedback"
+
 
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET="a5Q7mWZGoOyqnPz50K5ekJe0v57ccQfgXhR4/7gf3Ak="
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+DISCORD_CLIENT_ID="1272315551703892172"
+DISCORD_CLIENT_SECRET="qKJRCUXsARQcNvBZokFDj0o9chFnXfyv"
